renamed fetch endpoint to `/fetch/names` and fixed a bug
