# crates/server/src/api/v1/fetch.rs
@@ -11,8 +11,8 @@ use axum::{
 };
 use std::collections::HashMap;
 use warg_api::v1::fetch::{
-    FetchError, FetchLogsRequest, FetchLogsResponse, FetchPackageIdsRequest,
-    FetchPackageIdsResponse, PublishedRecord,
+    FetchError, FetchLogsRequest, FetchLogsResponse, FetchPackageNamesRequest,
+    FetchPackageNamesResponse, PublishedRecord,
 };
 use warg_crypto::hash::{AnyHash, Sha256};
 use warg_protocol::registry::{LogId, RecordId, TimestampedCheckpoint};
@@ -21,7 +21,7 @@ use warg_protocol::SerdeEnvelope;
 const DEFAULT_RECORDS_LIMIT: u16 = 100;
 const MAX_RECORDS_LIMIT: u16 = 1000;
 
-const MAX_PACKAGE_IDS_LIMIT: usize = 1000;
+const MAX_PACKAGE_NAMES_LIMIT: usize = 1000;
 
 #[derive(Clone)]
 pub struct Config {
@@ -37,7 +37,7 @@ impl Config {
         Router::new()
             .route("/checkpoint", get(fetch_checkpoint))
             .route("/logs", post(fetch_logs))
-            .route("/ids", post(fetch_package_ids))
+            .route("/names", post(fetch_package_names))
             .with_state(self)
     }
 }
@@ -174,18 +174,22 @@ async fn fetch_checkpoint(
 }
 
 #[debug_handler]
-async fn fetch_package_ids(
+async fn fetch_package_names(
     State(config): State<Config>,
     RegistryHeader(_registry_header): RegistryHeader,
-    Json(body): Json<FetchPackageIdsRequest<'static>>,
-) -> Result<Json<FetchPackageIdsResponse>, FetchApiError> {
-    let log_ids = if body.packages.len() > MAX_PACKAGE_IDS_LIMIT {
-        body.packages.get(..MAX_PACKAGE_IDS_LIMIT).unwrap()
+    Json(body): Json<FetchPackageNamesRequest<'static>>,
+) -> Result<Json<FetchPackageNamesResponse>, FetchApiError> {
+    let log_ids = if body.packages.len() > MAX_PACKAGE_NAMES_LIMIT {
+        body.packages.get(..MAX_PACKAGE_NAMES_LIMIT).unwrap()
     } else {
         &body.packages
     };
 
-    let packages = config.core_service.store().get_package_ids(log_ids).await?;
+    let packages = config
+        .core_service
+        .store()
+        .get_package_names(log_ids)
+        .await?;
 
-    Ok(Json(FetchPackageIdsResponse { packages }))
+    Ok(Json(FetchPackageNamesResponse { packages }))
 }
